# gtcrn

./: .gitignore  check_persist.py  deploy_rk3568.py  deploy_speex_linux.py  diag2.py  diag_audio.py  export_onnx.py  fuse_bn.py  infer.py  persist_audio.py  realtime_infer.py  reboot_and_test.py  restart_pa.py  run_rk3568.sh  set_default_audio.py  set_rk809_output.py  validate_cpp.py  verify_reboot.py  依赖环境说明.md  模型转换注意事项.md  运行程序.md  项目架构指南.md
cpp_src/: AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  CMakeLists_linux.txt  main.cpp  main_linux.cpp
stream/: gtcrn_stream.py
